[package]
name = "universal-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }   
strum = "0.26.3"
strum_macros = "0.26.4"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["blocking","json"]  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"